--- a/src/app/modules/tupa-05/components/tupa-05-parte-i/tupa-05-parte-i.component.html
+++ b/src/app/modules/tupa-05/components/tupa-05-parte-i/tupa-05-parte-i.component.html
@@ -130,7 +130,7 @@
   <h6
     class="mb-6 border-b border-dashed border-b-gray-600 pb-2 text-lg font-bold text-gray-900 dark:text-white"
     *ngIf="!!person">
-    Datos del solicitante
+    Datos del Representante
   </h6>
   <!-- level 7 -->
   <div class="mb-6" *ngIf="!!person">
