--- a/src/app/modules/tupa-05/components/tupa-05-parte-iii/tupa-05-parte-iii.component.html
+++ b/src/app/modules/tupa-05/components/tupa-05-parte-iii/tupa-05-parte-iii.component.html
@@ -22,20 +22,14 @@
       <label class="col-span-2 mb-2 block text-sm font-medium text-gray-900 dark:text-white"
         >País Origen <b class="text-red-600">*</b></label
       >
-      <select
-        class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm text-gray-900 focus:border-primary focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary">
-        <option value="NDE">.- valor 1</option>
-      </select>
+      <app-pais-select />
     </div>
 
     <div>
       <label class="col-span-2 mb-2 block text-sm font-medium text-gray-900 dark:text-white"
         >País Procedencia <b class="text-red-600">*</b></label
       >
-      <select
-        class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm text-gray-900 focus:border-primary focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary">
-        <option value="NDE">.- valor 1</option>
-      </select>
+      <app-pais-select />
     </div>
   </div>
 
@@ -52,10 +46,7 @@
     </div>
 
     <div>
-      <select
-        class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm text-gray-900 focus:border-primary focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary">
-        <option value="NDE">.- valor 1</option>
-      </select>
+      <app-pais-select />
     </div>
   </div>
 
