--- a/src/app/modules/shared/person/components/person-create/person-create.component.html
+++ b/src/app/modules/shared/person/components/person-create/person-create.component.html
@@ -7,56 +7,44 @@
           <li class="w-full border-b border-gray-200 dark:border-gray-600 sm:border-b-0 sm:border-r">
             <div class="flex items-center ps-3">
               <input
-                id="horizontal-list-radio-license"
+                id="validate-dni"
                 type="radio"
-                name="list-radio"
+                name="validate"
+                value="DNI"
+                (click)="selectValidateType($event)"
+                [checked]="validateType == 'DNI'"
                 class="h-4 w-4 border-gray-300 bg-gray-100 text-blue-600 focus:ring-2 focus:ring-blue-500 dark:border-gray-500 dark:bg-gray-600 dark:ring-offset-gray-700 dark:focus:ring-blue-600 dark:focus:ring-offset-gray-700" />
-              <label
-                for="horizontal-list-radio-license"
-                class="ms-2 w-full py-3 text-sm font-medium text-gray-900 dark:text-gray-300"
-                >DNI
+              <label for="validate-dni" class="ms-2 w-full py-3 text-sm font-medium text-gray-900 dark:text-gray-300">
+                DNI
               </label>
             </div>
           </li>
           <li class="w-full border-b border-gray-200 dark:border-gray-600 sm:border-b-0 sm:border-r">
             <div class="flex items-center ps-3">
               <input
-                id="horizontal-list-radio-id"
+                id="validate-ruc"
                 type="radio"
-                name="list-radio"
+                name="validate"
+                value="RUC"
+                (click)="selectValidateType($event)"
+                [checked]="validateType == 'RUC'"
                 class="h-4 w-4 border-gray-300 bg-gray-100 text-blue-600 focus:ring-2 focus:ring-blue-500 dark:border-gray-500 dark:bg-gray-600 dark:ring-offset-gray-700 dark:focus:ring-blue-600 dark:focus:ring-offset-gray-700" />
-              <label
-                for="horizontal-list-radio-id"
-                class="ms-2 w-full py-3 text-sm font-medium text-gray-900 dark:text-gray-300"
-                >RUC</label
-              >
+              <label for="validate-ruc" class="ms-2 w-full py-3 text-sm font-medium text-gray-900 dark:text-gray-300">
+                RUC
+              </label>
             </div>
           </li>
         </ul>
       </div>
 
-      <div class="flex justify-end">
+      <div class="flex justify-end" *ngIf="!!validateType">
         <button
+          [disabled]="!createForm.value.documentNumber"
+          type="button"
+          (click)="onValidate()"
           class="w-full rounded-lg bg-primary px-5 py-2.5 text-center text-sm font-medium text-white ring-primary/50 focus:outline-none focus:ring-4 sm:w-auto md:ml-2 md:mt-0">
           Validar
         </button>
-      </div>
-    </div>
-
-    <div class="mb-3 grid grid-cols-1 gap-4">
-      <div class="col-span-2 sm:col-span-1">
-        <label for="category1" class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">
-          Tipo de Persona <b class="text-red-600">*</b>
-        </label>
-        <select
-          formControlName="type"
-          class="focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-500 dark:focus:border-primary-500 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 dark:border-gray-500 dark:bg-gray-600 dark:text-white dark:placeholder-gray-400">
-          <option value="NATURAL">NATURAL</option>
-          <option value="JURIDICA">JURIDICA</option>
-        </select>
-        <p class="mt-2 text-sm text-red-600 dark:text-red-500">
-          {{ createForm.getError('type') }}
-        </p>
       </div>
     </div>
 
@@ -77,6 +65,23 @@
           formControlName="documentNumber"
           type="text"
           class="focus:ring-primary-600 focus:border-primary-600 dark:focus:ring-primary-500 dark:focus:border-primary-500 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 dark:border-gray-500 dark:bg-gray-600 dark:text-white dark:placeholder-gray-400" />
+      </div>
+    </div>
+
+    <div class="mb-3 grid grid-cols-1 gap-4">
+      <div class="col-span-2 sm:col-span-1">
+        <label for="category1" class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">
+          Tipo de Persona <b class="text-red-600">*</b>
+        </label>
+        <select
+          formControlName="type"
+          class="focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-500 dark:focus:border-primary-500 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 dark:border-gray-500 dark:bg-gray-600 dark:text-white dark:placeholder-gray-400">
+          <option value="NATURAL">NATURAL</option>
+          <option value="JURIDICA">JURIDICA</option>
+        </select>
+        <p class="mt-2 text-sm text-red-600 dark:text-red-500">
+          {{ createForm.getError('type') }}
+        </p>
       </div>
     </div>
 
@@ -132,23 +137,6 @@
           formControlName="secondaryName"
           type="text"
           class="focus:ring-primary-600 focus:border-primary-600 dark:focus:ring-primary-500 dark:focus:border-primary-500 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 dark:border-gray-500 dark:bg-gray-600 dark:text-white dark:placeholder-gray-400" />
-      </div>
-    </div>
-
-    <div class="mb-3 grid grid-cols-1 gap-4" *ngIf="createForm.value.type == 'NATURAL'">
-      <div class="col-span-2 sm:col-span-1">
-        <label for="category1" class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">
-          Sexo <b class="text-red-600">*</b>
-        </label>
-        <select
-          formControlName="gender"
-          class="focus:ring-primary-500 focus:border-primary-500 dark:focus:ring-primary-500 dark:focus:border-primary-500 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 dark:border-gray-500 dark:bg-gray-600 dark:text-white dark:placeholder-gray-400">
-          <option value="0">FEMENINO</option>
-          <option value="1">MASCULINO</option>
-        </select>
-        <p class="mt-2 text-sm text-red-600 dark:text-red-500">
-          {{ createForm.getError('gender') }}
-        </p>
       </div>
     </div>
 
