--- a/src/app/modules/shared/establishment/components/establishment-type-select/establishment-type-select.component.html
+++ b/src/app/modules/shared/establishment/components/establishment-type-select/establishment-type-select.component.html
@@ -1,4 +1,7 @@
 <select
+  [(ngModel)]="value"
+  (change)="onChange($event)"
+  [disabled]="isDisabled || false"
   class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm text-gray-900 focus:border-primary focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary">
   <option value="G">Granja Avícola</option>
   <option value="P">Planta de Incubación</option>
