--- a/src/app/modules/tupa-05/components/tupa-05-tab-container/tupa-05-tab-container.component.html
+++ b/src/app/modules/tupa-05/components/tupa-05-tab-container/tupa-05-tab-container.component.html
@@ -4,7 +4,10 @@
     *ngIf="this.currentTabKey === tabs[0].id"
     [person]="person"
     (eventPerson)="selectPerson($event)" />
-  <app-tupa-05-parte-ii *ngIf="this.currentTabKey === tabs[1].id" />
+  <app-tupa-05-parte-ii
+    *ngIf="this.currentTabKey === tabs[1].id"
+    [establishment]="establishment"
+    (eventEstablishment)="selectEstablishment($event)" />
   <app-tupa-05-parte-iii *ngIf="this.currentTabKey === tabs[2].id" />
   <app-tupa-05-parte-iv *ngIf="this.currentTabKey === tabs[3].id" />
   <app-tupa-05-parte-v *ngIf="this.currentTabKey === tabs[4].id" />
