--- a/src/app/modules/shared/establishment/components/establishment-create/establishment-create.component.html
+++ b/src/app/modules/shared/establishment/components/establishment-create/establishment-create.component.html
@@ -1,4 +1,4 @@
-<app-modal [isOpen]="isOpen" (eventClose)="onClose()" title="Registrar Persona">
+<app-modal [isOpen]="isOpen" (eventClose)="onClose()" [title]="title">
   <form [formGroup]="createForm" (submit)="onSubmit()">
     <div class="mb-3 grid grid-cols-1 gap-4">
       <div class="col-span-2 sm:col-span-1">
