--- a/src/app/modules/tupa-05/components/tupa-05-parte-ii/tupa-05-parte-ii.component.html
+++ b/src/app/modules/tupa-05/components/tupa-05-parte-ii/tupa-05-parte-ii.component.html
@@ -124,7 +124,7 @@
       <input
         type="text"
         readonly
-        [value]="establishment?.name"
+        [value]="technical?.nombreRazonSocial"
         class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm text-gray-900 focus:border-primary focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary" />
     </div>
     <div>
@@ -134,20 +134,20 @@
       <input
         type="text"
         readonly
-        [value]="establishment?.name"
+        [value]="technical?.documentNumber"
         class="block w-full rounded-lg border border-gray-300 p-2.5 text-sm text-gray-900 focus:border-primary focus:ring-primary dark:border-gray-600 dark:text-white dark:focus:border-primary dark:focus:ring-primary" />
     </div>
     <div class="justify-end">
       <button
         type="button"
-        (click)="searchModalOpen()"
+        (click)="searchPersonModalOpen()"
         class="relative mt-2 w-full rounded-lg bg-primary px-5 py-2.5 text-center text-sm font-medium text-white ring-primary/50 focus:outline-none focus:ring-4 sm:w-auto md:top-7 md:ml-2 md:mt-0">
         Buscar
       </button>
 
       <button
         type="button"
-        (click)="createModalOpen()"
+        (click)="createPersonModalOpen()"
         class="relative mt-2 w-full rounded-lg bg-primary px-5 py-2.5 text-center text-sm font-medium text-white ring-primary/50 focus:outline-none focus:ring-4 sm:w-auto md:top-7 md:ml-2 md:mt-0">
         Agregar
       </button>
@@ -166,3 +166,15 @@
   [isOpen]="isSearchModal"
   (eventClose)="searchModalClose()"
   (eventSelect)="onSelectEstablishment($event)" />
+
+<app-person-create
+  title="Agregar Técnico"
+  [isOpen]="isPersonCreateModal"
+  (eventClose)="createPersonModalClose()"
+  (eventSave)="onSaveTechnical($event)" />
+
+<app-person-search
+  title="Buscar Técnico"
+  [isOpen]="isPersonSearchModal"
+  (eventClose)="searchPersonModalClose()"
+  (eventSelect)="onSelectTechnical($event)" />
