--- a/src/app/modules/tupa-05/components/tupa-05-tab-container/tupa-05-tab-container.component.html
+++ b/src/app/modules/tupa-05/components/tupa-05-tab-container/tupa-05-tab-container.component.html
@@ -7,7 +7,9 @@
   <app-tupa-05-parte-ii
     *ngIf="this.currentTabKey === tabs[1].id"
     [establishment]="establishment"
-    (eventEstablishment)="selectEstablishment($event)" />
+    [technical]="technical"
+    (eventEstablishment)="selectEstablishment($event)"
+    (eventTechnical)="selectTechnical($event)" />
   <app-tupa-05-parte-iii *ngIf="this.currentTabKey === tabs[2].id" />
   <app-tupa-05-parte-iv *ngIf="this.currentTabKey === tabs[3].id" />
   <app-tupa-05-parte-v *ngIf="this.currentTabKey === tabs[4].id" />
