--- a/src/app/modules/tupa-05/components/tupa-05-tab-container/tupa-05-tab-container.component.html
+++ b/src/app/modules/tupa-05/components/tupa-05-tab-container/tupa-05-tab-container.component.html
@@ -11,10 +11,6 @@
     (eventEstablishment)="selectEstablishment($event)"
     (eventTechnical)="selectTechnical($event)" />
   <app-tupa-05-parte-iii *ngIf="this.currentTabKey === tabs[2].id" [finalidad]="finalidad" />
-  <app-tupa-05-parte-iv *ngIf="this.currentTabKey === tabs[3].id" />
-  <app-tupa-05-parte-v
-    *ngIf="this.currentTabKey === tabs[4].id"
-    [person]="personPayment"
-    [payments]="payments"
-    (eventPerson)="selectPersonPayment($event)" />
+  <app-tupa-05-parte-iv *ngIf="this.currentTabKey === tabs[3].id" [animals]="animals" [subProducts]="subProducts" />
+  <app-tupa-05-parte-v *ngIf="this.currentTabKey === tabs[4].id" [person]="personPayment" [payments]="payments" />
 </div>
