--- a/src/app/modules/shared/product/components/product-animal-edit/product-animal-edit.component.html
+++ b/src/app/modules/shared/product/components/product-animal-edit/product-animal-edit.component.html
@@ -1,27 +1,19 @@
-<app-modal [title]="title" [isOpen]="isOpen" (eventClose)="onClose()" [formGroup]="createForm">
-  <form [formGroup]="createForm" (submit)="onSubmit()">
+<app-modal [title]="title" [isOpen]="isOpen" (eventClose)="onClose()">
+  <form [formGroup]="editForm" (submit)="onSubmit()">
     <div class="mb-3 grid grid-cols-1 gap-4">
       <div class="col-span-2 sm:col-span-1">
         <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">
           Cod. Producto <b class="text-red-600">*</b>
         </label>
-        <div class="flex gap-2">
-          <input
-            readonly
-            formControlName="productId"
-            type="text"
-            class="focus:ring-primary-600 focus:border-primary-600 dark:focus:ring-primary-500 dark:focus:border-primary-500 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 dark:border-gray-500 dark:bg-gray-600 dark:text-white dark:placeholder-gray-400" />
-          <button
-            (click)="openSearch()"
-            type="button"
-            class="rounded-lg bg-primary px-5 py-3 text-center text-sm font-medium text-white ring-primary/50 focus:outline-none focus:ring-4">
-            Buscar
-          </button>
-        </div>
+        <input
+          readonly
+          formControlName="productId"
+          type="text"
+          class="focus:ring-primary-600 focus:border-primary-600 dark:focus:ring-primary-500 dark:focus:border-primary-500 block w-full rounded-lg border border-gray-300 bg-gray-50 p-2.5 text-sm text-gray-900 dark:border-gray-500 dark:bg-gray-600 dark:text-white dark:placeholder-gray-400" />
       </div>
     </div>
 
-    <div *ngIf="!!createForm.value.productId">
+    <div *ngIf="!!editForm.value.productId">
       <div class="mb-3 grid grid-cols-1 gap-4">
         <div class="col-span-2 sm:col-span-1">
           <label class="mb-2 block text-sm font-medium text-gray-900 dark:text-white">
@@ -87,15 +79,12 @@
 
       <div class="text-right">
         <button
-          [disabled]="!createForm.valid"
+          [disabled]="!editForm.valid"
           type="submit"
           class="rounded-lg bg-primary px-5 py-3 text-center text-sm font-medium text-white ring-primary/50 focus:outline-none focus:ring-4">
-          Agregar
+          Actualizar
         </button>
       </div>
     </div>
   </form>
 </app-modal>
-
-<!-- search -->
-<app-product-search type="animal" [isOpen]="isSearch" (eventClose)="closeSearch()" (eventSelect)="onProduct($event)" />
