--- a/src/app/modules/shared/tupa/components/tupa-payment-tab/tupa-payment-tab.component.html
+++ b/src/app/modules/shared/tupa/components/tupa-payment-tab/tupa-payment-tab.component.html
@@ -42,7 +42,7 @@
       <app-procedure-service-select
         [value]="createForm.value.serviceId"
         [procedureId]="createForm.value.procedureId"
-        (eventChange)="onService($event)" />
+        (eventData)="onService($event)" />
     </div>
     <div>
       <button
@@ -54,44 +54,7 @@
 
   <!-- level 4 -->
   <div class="mb-10">
-    <div class="relative overflow-x-auto">
-      <table class="w-full table-auto">
-        <!--Table head-->
-        <thead class="text-xs uppercase text-muted-foreground">
-          <tr>
-            <th class="py-3 text-left">Conceptos de pago</th>
-            <th class="py-3 text-right">Cantidad</th>
-            <th class="py-3 text-right">Costo</th>
-          </tr>
-        </thead>
-        <!--Table body-->
-        <tbody>
-          <tr class="border-b border-dashed border-border hover:bg-card">
-            <td class="py-2 pr-2">
-              <span class="text-sm font-semibold text-muted-foreground">
-                Regístro de almacen para guardacustodia (inspección del almacén)
-              </span>
-            </td>
-            <td class="py-2 pl-2 text-right">
-              <span class="text-sm font-semibold text-muted-foreground">1</span>
-            </td>
-            <td class="py-2 pl-2 text-right">
-              <span class="text-sm font-semibold text-muted-foreground">180</span>
-            </td>
-          </tr>
-        </tbody>
-        <tfoot>
-          <tr class="border-b border-dashed border-border hover:bg-card">
-            <td class="py-2 pr-2" colspan="2">
-              <span class="text-sm font-semibold text-muted-foreground">Total</span>
-            </td>
-            <td class="py-2 pl-2 text-right">
-              <span class="text-sm font-semibold text-muted-foreground">180</span>
-            </td>
-          </tr>
-        </tfoot>
-      </table>
-    </div>
+    <app-payment-data-table [data]="paymentDatas" [total]="total" />
   </div>
 
   <!-- level 5 -->
