--- a/src/app/modules/tupa-04/components/tupa-04-tab-container/tupa-04-tab-container.component.html
+++ b/src/app/modules/tupa-04/components/tupa-04-tab-container/tupa-04-tab-container.component.html
@@ -12,6 +12,8 @@
     [technical]="technical"
     (eventEstablishment)="selectEstablishment($event)"
     (eventTechnical)="selectTechnical($event)" />
+  <app-tupa-04-recinto *ngIf="this.currentTabKey === tabs[2].id" [recinto]="recinto" />
+  <app-tupa-04-info-animal *ngIf="this.currentTabKey === tabs[3].id" [animals]="animals" />
   <app-tupa-payment-tab
     *ngIf="this.currentTabKey === tabs[4].id"
     [person]="personPayment"
