--- a/src/app/modules/tupa-05/components/tupa-05-mercancia-pecuaria/tupa-05-mercancia-pecuaria.component.html
+++ b/src/app/modules/tupa-05/components/tupa-05-mercancia-pecuaria/tupa-05-mercancia-pecuaria.component.html
@@ -1,137 +1,169 @@
 <form>
   <!-- header -->
-  <h6
-    class="relative mb-7 border-b border-dashed border-b-gray-600 pb-2 text-lg font-bold text-gray-900 dark:text-white">
-    Animal vivo
-    <button class="absolute right-0 top-0 text-primary" type="button" (click)="openCreateAnimal()">
-      <u>Agregar</u>
-    </button>
+  <h6 class="mb-7 border-b border-dashed border-b-gray-600 pb-2 text-lg font-bold text-gray-900 dark:text-white">
+    Mercancia Pecuaria
   </h6>
 
-  <!-- level 1 -->
-  <div class="mb-10">
-    <div class="relative overflow-x-auto">
-      <div class="text-right"></div>
-      <table class="w-full table-auto">
-        <!--Table head-->
-        <thead class="text-xs uppercase text-slate-500">
-          <tr>
-            <th class="py-3 text-left">P.A</th>
-            <th class="py-3 text-left">Especie/Categoría</th>
-            <th class="py-3 text-left">Sexo</th>
-            <th class="py-3 text-left">Edad</th>
-            <th class="py-3 text-left">Procedencia</th>
-            <th class="py-3 text-center">Cantidad</th>
-            <th class="py-3 text-center">Acciones</th>
-          </tr>
-        </thead>
-        <!--Table body-->
-        <tbody>
-          <tr class="border-b border-dashed border-border hover:bg-card" *ngFor="let item of animals">
-            <td class="py-2 pr-2">
-              <span class="text-sm font-semibold">
-                {{ item.productId }}
-              </span>
-            </td>
-            <td class="py-2 pl-2 text-left">
-              <span class="text-sm font-semibold">
-                {{ item.productName }}
-              </span>
-            </td>
-            <td class="py-2 pl-2 text-left">
-              <span class="text-sm font-semibold">
-                {{ item.gender }}
-              </span>
-            </td>
-            <td class="py-2 pl-2 text-left">
-              <span class="text-sm font-semibold">
-                {{ item.age }}
-              </span>
-            </td>
-            <td class="py-2 pl-2 text-left">
-              <span class="text-sm font-semibold">
-                {{ item.origin }}
-              </span>
-            </td>
-            <td class="py-2 pl-2 text-center">
-              <span class="text-sm font-semibold">
-                {{ item.amount }}
-              </span>
-            </td>
-            <td>
-              <div class="flex justify-center gap-2">
-                <svg-icon
-                  src="assets/icons/heroicons/outline/trash.svg"
-                  (click)="deleteAnimal(item)"
-                  [svgClass]="'h-5 w-5 text-muted-foreground/50 cursor-pointer'">
-                </svg-icon>
-                <svg-icon
-                  src="assets/icons/heroicons/outline/edit.svg"
-                  (click)="editAnimal(item)"
-                  [svgClass]="'h-5 w-5 text-muted-foreground/50 cursor-pointer'">
-                </svg-icon>
-              </div>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+  <!-- level 2 -->
+  <div class="mb-6 flex">
+    <div class="ml-4">
+      <input
+        type="radio"
+        id="animal"
+        class="mr-2"
+        [checked]="productType == 'ANIMAL'"
+        (change)="handleType('ANIMAL')" />
+      <label for="animal" class="col-span-2 mb-2 text-sm font-medium text-gray-900 dark:text-white">
+        Animales Vivos
+      </label>
+    </div>
+
+    <div class="ml-4">
+      <input
+        type="radio"
+        id="product"
+        class="mr-2"
+        [checked]="productType == 'PRODUCT'"
+        (change)="handleType('PRODUCT')" />
+      <label for="product" class="col-span-2 mb-2 text-sm font-medium text-gray-900 dark:text-white">Producto</label>
     </div>
   </div>
 
-  <!-- level 2 -->
-  <h6 class="relative border-b border-dashed border-b-gray-600 pb-2 text-lg font-bold text-gray-900 dark:text-white">
-    Producto
-    <button class="absolute right-0 top-0 text-primary" type="button" (click)="openCreateSubProduct()">
-      <u>Agregar</u>
-    </button>
-  </h6>
+  <!-- animal -->
+  <div *ngIf="productType == 'ANIMAL'">
+    <h6
+      class="relative mb-7 border-b border-dashed border-b-gray-600 pb-2 text-lg font-bold text-gray-900 dark:text-white">
+      Animal vivo
+      <button class="absolute right-0 top-0 text-primary" type="button" (click)="openCreateAnimal()">
+        <u>Agregar</u>
+      </button>
+    </h6>
 
-  <!-- level 2 -->
-  <div class="mb-6">
-    <div class="relative overflow-x-auto">
-      <table class="w-full table-auto">
-        <!--Table head-->
-        <thead class="text-xs uppercase text-slate-500">
-          <tr>
-            <th class="py-3 text-left">P.A</th>
-            <th class="py-3 text-left">Producto/SubProducto</th>
-            <th class="py-3 text-left">Peso (Kg)</th>
-            <th class="py-3 text-left">Nombre Producto en la Autorización</th>
-            <th class="py-3 text-center">Acciones</th>
-          </tr>
-        </thead>
-        <!--Table body-->
-        <tbody>
-          <tr class="border-b border-dashed border-border hover:bg-card" *ngFor="let item of subProducts">
-            <td class="py-2 pr-2">
-              <span class="text-sm font-semibold">{{ item.productId }}</span>
-            </td>
-            <td class="py-2 pl-2 text-left">
-              <span class="text-sm font-semibold">{{ item.productName }}</span>
-            </td>
-            <td class="py-2 pl-2">
-              <span class="text-sm font-semibold">{{ item.weight }}</span>
-            </td>
-            <td class="py-2 pl-2">
-              <span class="text-sm font-semibold">{{ item.authorizeName }}</span>
-            </td>
-            <td class="py-2 pl-2">
-              <div class="flex justify-center gap-2">
-                <svg-icon
-                  src="assets/icons/heroicons/outline/trash.svg"
-                  (click)="deleteSubProduct(item)"
-                  [svgClass]="'h-5 w-5 text-muted-foreground/50 cursor-pointer'">
-                </svg-icon>
-                <svg-icon
-                  src="assets/icons/heroicons/outline/edit.svg"
-                  (click)="editSubProduct(item)"
-                  [svgClass]="'h-5 w-5 text-muted-foreground/50 cursor-pointer'">
-                </svg-icon>
-              </div>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+    <div class="mb-10">
+      <div class="relative overflow-x-auto">
+        <div class="text-right"></div>
+        <table class="w-full table-auto">
+          <!--Table head-->
+          <thead class="text-xs uppercase text-slate-500">
+            <tr>
+              <th class="py-3 text-left">P.A</th>
+              <th class="py-3 text-left">Especie/Categoría</th>
+              <th class="py-3 text-left">Sexo</th>
+              <th class="py-3 text-left">Edad</th>
+              <th class="py-3 text-left">Procedencia</th>
+              <th class="py-3 text-center">Cantidad</th>
+              <th class="py-3 text-center">Acciones</th>
+            </tr>
+          </thead>
+          <!--Table body-->
+          <tbody>
+            <tr class="border-b border-dashed border-border hover:bg-card" *ngFor="let item of animals">
+              <td class="py-2 pr-2">
+                <span class="text-sm font-semibold">
+                  {{ item.productId }}
+                </span>
+              </td>
+              <td class="py-2 pl-2 text-left">
+                <span class="text-sm font-semibold">
+                  {{ item.productName }}
+                </span>
+              </td>
+              <td class="py-2 pl-2 text-left">
+                <span class="text-sm font-semibold">
+                  {{ item.gender }}
+                </span>
+              </td>
+              <td class="py-2 pl-2 text-left">
+                <span class="text-sm font-semibold">
+                  {{ item.age }}
+                </span>
+              </td>
+              <td class="py-2 pl-2 text-left">
+                <span class="text-sm font-semibold">
+                  {{ item.origin }}
+                </span>
+              </td>
+              <td class="py-2 pl-2 text-center">
+                <span class="text-sm font-semibold">
+                  {{ item.amount }}
+                </span>
+              </td>
+              <td>
+                <div class="flex justify-center gap-2">
+                  <svg-icon
+                    src="assets/icons/heroicons/outline/trash.svg"
+                    (click)="deleteAnimal(item)"
+                    [svgClass]="'h-5 w-5 text-muted-foreground/50 cursor-pointer'">
+                  </svg-icon>
+                  <svg-icon
+                    src="assets/icons/heroicons/outline/edit.svg"
+                    (click)="editAnimal(item)"
+                    [svgClass]="'h-5 w-5 text-muted-foreground/50 cursor-pointer'">
+                  </svg-icon>
+                </div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+
+  <!-- product -->
+  <div *ngIf="productType == 'PRODUCT'">
+    <h6 class="relative border-b border-dashed border-b-gray-600 pb-2 text-lg font-bold text-gray-900 dark:text-white">
+      Producto
+      <button class="absolute right-0 top-0 text-primary" type="button" (click)="openCreateSubProduct()">
+        <u>Agregar</u>
+      </button>
+    </h6>
+
+    <div class="mb-6">
+      <div class="relative overflow-x-auto">
+        <table class="w-full table-auto">
+          <!--Table head-->
+          <thead class="text-xs uppercase text-slate-500">
+            <tr>
+              <th class="py-3 text-left">P.A</th>
+              <th class="py-3 text-left">Producto/SubProducto</th>
+              <th class="py-3 text-left">Peso (Kg)</th>
+              <th class="py-3 text-left">Nombre Producto en la Autorización</th>
+              <th class="py-3 text-center">Acciones</th>
+            </tr>
+          </thead>
+          <!--Table body-->
+          <tbody>
+            <tr class="border-b border-dashed border-border hover:bg-card" *ngFor="let item of subProducts">
+              <td class="py-2 pr-2">
+                <span class="text-sm font-semibold">{{ item.productId }}</span>
+              </td>
+              <td class="py-2 pl-2 text-left">
+                <span class="text-sm font-semibold">{{ item.productName }}</span>
+              </td>
+              <td class="py-2 pl-2">
+                <span class="text-sm font-semibold">{{ item.weight }}</span>
+              </td>
+              <td class="py-2 pl-2">
+                <span class="text-sm font-semibold">{{ item.authorizeName }}</span>
+              </td>
+              <td class="py-2 pl-2">
+                <div class="flex justify-center gap-2">
+                  <svg-icon
+                    src="assets/icons/heroicons/outline/trash.svg"
+                    (click)="deleteSubProduct(item)"
+                    [svgClass]="'h-5 w-5 text-muted-foreground/50 cursor-pointer'">
+                  </svg-icon>
+                  <svg-icon
+                    src="assets/icons/heroicons/outline/edit.svg"
+                    (click)="editSubProduct(item)"
+                    [svgClass]="'h-5 w-5 text-muted-foreground/50 cursor-pointer'">
+                  </svg-icon>
+                </div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
 </form>
