--- a/src/app/modules/dev-03/tupa-04/components/tupa-04-tab-container/tupa-04-tab-container.component.html
+++ b/src/app/modules/dev-03/tupa-04/components/tupa-04-tab-container/tupa-04-tab-container.component.html
@@ -13,7 +13,7 @@
     (eventEstablishment)="selectEstablishment($event)"
     (eventTechnical)="selectTechnical($event)" />
   <app-tupa-04-recinto *ngIf="this.currentTabKey === tabs[2].id" [recinto]="recinto" />
-  <app-tupa-04-info-animal *ngIf="this.currentTabKey === tabs[3].id" [animals]="animals" />
+  <app-tupa-04-info-animal *ngIf="this.currentTabKey === tabs[3].id" [cuarentenas]="cuarentenas" />
   <app-tupa-payment-tab
     *ngIf="this.currentTabKey === tabs[4].id"
     [person]="personPayment"
