--- a/src/app/modules/dev-03/tupa-05/components/tupa-05-mercancia-pecuaria/tupa-05-mercancia-pecuaria.component.html
+++ b/src/app/modules/dev-03/tupa-05/components/tupa-05-mercancia-pecuaria/tupa-05-mercancia-pecuaria.component.html
@@ -7,30 +7,20 @@
   <!-- level 2 -->
   <div class="mb-6 flex">
     <div class="ml-4">
-      <input
-        type="radio"
-        id="animal"
-        class="mr-2"
-        [checked]="productType == 'ANIMAL'"
-        (change)="handleType('ANIMAL')" />
+      <input type="radio" id="animal" class="mr-2" [checked]="productType == 'A'" (change)="handleType('ANIMAL')" />
       <label for="animal" class="col-span-2 mb-2 text-sm font-medium text-gray-900 dark:text-white">
         Animales Vivos
       </label>
     </div>
 
     <div class="ml-4">
-      <input
-        type="radio"
-        id="product"
-        class="mr-2"
-        [checked]="productType == 'PRODUCT'"
-        (change)="handleType('PRODUCT')" />
+      <input type="radio" id="product" class="mr-2" [checked]="productType == 'P'" (change)="handleType('PRODUCT')" />
       <label for="product" class="col-span-2 mb-2 text-sm font-medium text-gray-900 dark:text-white">Producto</label>
     </div>
   </div>
 
   <!-- animal -->
-  <div *ngIf="productType == 'ANIMAL'">
+  <div *ngIf="productType == 'A'">
     <h6
       class="relative mb-7 border-b border-dashed border-b-gray-600 pb-2 text-lg font-bold text-gray-900 dark:text-white">
       Animal vivo
@@ -57,7 +47,7 @@
           </thead>
           <!--Table body-->
           <tbody>
-            <tr class="border-b border-dashed border-border hover:bg-card" *ngFor="let item of animals">
+            <tr class="border-b border-dashed border-border hover:bg-card" *ngFor="let item of cuarentenas">
               <td class="py-2 pr-2">
                 <span class="text-sm font-semibold">
                   {{ item.productId }}
@@ -92,12 +82,12 @@
                 <div class="flex justify-center gap-2">
                   <svg-icon
                     src="assets/icons/heroicons/outline/trash.svg"
-                    (click)="deleteAnimal(item)"
+                    (click)="onDelete(item)"
                     [svgClass]="'h-5 w-5 text-muted-foreground/50 cursor-pointer'">
                   </svg-icon>
                   <svg-icon
                     src="assets/icons/heroicons/outline/edit.svg"
-                    (click)="editAnimal(item)"
+                    (click)="onEdit(item)"
                     [svgClass]="'h-5 w-5 text-muted-foreground/50 cursor-pointer'">
                   </svg-icon>
                 </div>
@@ -110,7 +100,7 @@
   </div>
 
   <!-- product -->
-  <div *ngIf="productType == 'PRODUCT'">
+  <div *ngIf="productType == 'P'">
     <h6 class="relative border-b border-dashed border-b-gray-600 pb-2 text-lg font-bold text-gray-900 dark:text-white">
       Producto
       <button class="absolute right-0 top-0 text-primary" type="button" (click)="openCreateSubProduct()">
@@ -133,7 +123,7 @@
           </thead>
           <!--Table body-->
           <tbody>
-            <tr class="border-b border-dashed border-border hover:bg-card" *ngFor="let item of subProducts">
+            <tr class="border-b border-dashed border-border hover:bg-card" *ngFor="let item of cuarentenas">
               <td class="py-2 pr-2">
                 <span class="text-sm font-semibold">{{ item.productId }}</span>
               </td>
@@ -150,12 +140,12 @@
                 <div class="flex justify-center gap-2">
                   <svg-icon
                     src="assets/icons/heroicons/outline/trash.svg"
-                    (click)="deleteSubProduct(item)"
+                    (click)="onDelete(item)"
                     [svgClass]="'h-5 w-5 text-muted-foreground/50 cursor-pointer'">
                   </svg-icon>
                   <svg-icon
                     src="assets/icons/heroicons/outline/edit.svg"
-                    (click)="editSubProduct(item)"
+                    (click)="onEdit(item)"
                     [svgClass]="'h-5 w-5 text-muted-foreground/50 cursor-pointer'">
                   </svg-icon>
                 </div>
@@ -172,24 +162,24 @@
 <app-product-animal-create
   [isOpen]="isOpenCreateAnimal"
   (eventClose)="closeCreateAnimal()"
-  (eventSave)="onAnimal($event)" />
+  (eventSave)="onAdd($event)" />
 
 <!-- edit animal -->
 <app-product-animal-edit
   [isOpen]="isOpenEditAnimal"
-  [product]="animal"
+  [product]="cuarentena"
   (eventClose)="closeEditAnimal()"
-  (eventSave)="onAnimal($event)" />
+  (eventSave)="onAdd($event)" />
 
 <!-- add subproduct -->
 <app-product-subproduct-create
   [isOpen]="isOpenCreateSubProduct"
   (eventClose)="closeCreateSubProduct()"
-  (eventSave)="onSubProduct($event)" />
+  (eventSave)="onAdd($event)" />
 
 <!-- edit subproduct -->
 <app-product-subproduct-edit
   [isOpen]="isOpenEditSubProduct"
-  [product]="subProduct"
+  [product]="cuarentena"
   (eventClose)="closeEditSubProduct()"
-  (eventSave)="onSubProduct($event)" />
+  (eventSave)="onAdd($event)" />
