--- a/src/app/modules/dev-03/tupa-05/components/tupa-05-tab-container/tupa-05-tab-container.component.html
+++ b/src/app/modules/dev-03/tupa-05/components/tupa-05-tab-container/tupa-05-tab-container.component.html
@@ -16,14 +16,16 @@
   <app-tupa-05-mercancia-pecuaria
     *ngIf="this.currentTabKey === tabs[3].id"
     [productType]="productType"
-    [animals]="animals"
-    [subProducts]="subProducts"
-    (eventType)="selectProductType($event)" />
+    [cuarentenas]="cuarentenas"
+    (eventType)="selectProductType($event)"
+    (eventDelete)="onDeleteCuarentena($event)"
+    (eventClear)="onClearCuarentena()" />
   <app-tupa-payment-tab
     *ngIf="this.currentTabKey === tabs[4].id"
     [person]="personPayment"
-    [paymentDatas]="paymentDatas"
+    [services]="services"
     [payments]="payments"
-    (eventPerson)="selectPersonPayment($event)" />
+    (eventPerson)="selectPersonPayment($event)"
+    (eventSave)="onSave()" />
   <app-tupa-expediente-tab *ngIf="currentTabKey === tabs[5].id" />
 </div>
