--- a/src/app/modules/shared/method-payment/components/payment-table/payment-table.component.html
+++ b/src/app/modules/shared/method-payment/components/payment-table/payment-table.component.html
@@ -16,31 +16,31 @@
     <tbody>
       <tr class="border-b border-dashed border-border hover:bg-card" *ngFor="let item of data; let i = index">
         <td class="py-2 pr-2">
-          <span class="text-sm font-semibold text-muted-foreground"> {{ item.paymentTypeName }} </span>
+          <span class="text-sm font-semibold text-muted-foreground"> {{ item.typeName }} </span>
         </td>
         <td class="py-2 pr-2">
           <span class="text-sm font-semibold text-muted-foreground">
-            {{ item.paymentBankName }}
+            {{ item.bankName }}
           </span>
         </td>
         <td class="py-2 pr-2">
           <span class="text-sm font-semibold text-muted-foreground">
-            {{ item.paymentAccountName }}
+            {{ item.accountName }}
           </span>
         </td>
         <td class="py-2 pr-2">
           <span class="text-sm font-semibold text-muted-foreground">
-            {{ item.paymentNumber }}
+            {{ item.number }}
           </span>
         </td>
         <td class="py-2 pr-2">
           <span class="text-sm font-semibold text-muted-foreground">
-            {{ item.paymentDate }}
+            {{ item.date }}
           </span>
         </td>
         <td class="py-2 pr-2 text-right">
           <span class="text-sm font-semibold text-muted-foreground">
-            {{ item.paymentAmount }}
+            {{ item.amount }}
           </span>
         </td>
         <td class="py-2 pl-2">
